<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BitBay</string>
    <string name="ago">ago</string>
    <string name="currency_max">High(24)</string>
    <string name="currency_current">Last</string>
    <string name="currency_min">Low(24)</string>
    <string name="action_settings">Settings</string>
    <string name="updated">Updated</string>
    <string name="currency_volume">Volume</string>
    <string name="internet_connection">Check your internet connection.</string>
    <string name="bitbay_connection_error">BitBay error.</string>
    <string name="investment_amount">Investment amount</string>
    <string name="purchase_rate">Purchase rate</string>
    <string name="sales_rate">Sales rate</string>
    <string name="profit">Profit</string>
    <string name="fee">Fee (%)</string>
    <string name="currency_amount">Cryptocurrency amount</string>
    <string name="todo">Close card</string>
    <string name="expand_wallet">Show wallet</string>
    <string name="PLN">zł</string>
    <string name="USD">$</string>
    <string name="EUR">€</string>
    <string name="BTC">฿</string>
    <string name="calculator_instruction">You can calculate profit by filling in all fields except \"profit\" or you can fill out all fields except \"Sales Rate\" to calculate the sales rate needed to reach the established profit.</string>
    <string name="delete">Delete</string>
    <string name="price">Price</string>
    <string name="set_alarm">Set alarm</string>
    <string name="alaram_notification">Show notification.</string>
    <string name="check_interval">Refresh (s)</string>
    <string name="check_interval_edit">min. every 30 seconds</string>
    <string name="less_than" translatable="false">&lt;</string>
    <string name="greater_than" translatable="false">&gt;</string>
    <string name="banner_ad_id" translatable="false">*******************************************</string>
    <string name="test_ad_id" translatable="false">*******************************************</string>
    <string name="qr_focus">Focus on PUBLIC KEY first and press >.</string>
    <string name="qr_private_focus">Now focus on PRIVATE KEY and press >.</string>
    <string name="no_qr_detected">No QR code detected.</string>
    <string name="publicKey">Enter public key or tap QR code icon.</string>
    <string name="privateKey">Enter private key or tap QR code icon.</string>
    <string name="loginCheckBox">Remember me.</string>
    <string name="btnLogin">Connect</string>
    <string name="emptyKeyError">Please enter public and private key first.</string>
    <string name="default_card_value" translatable="false">0</string>
    <string name="available_funds">Available</string>
    <string name="locked_funds">Locked</string>
    <string name="total_funds">Total</string>
    <string name="rateHint">rate</string>
    <string name="valueHint">value</string>
    <string name="amountHint">amount</string>
    <string name="disconnectButton">Disconnect</string>
    <string name="information_about_api_key"><b>READ THIS !</b>\n The login function requires the API key with the permission to \"<b>Get a list of wallets</b>\" to verify the validity of the login data. \n\nYou can generate public and private keys by going to your Bitbay account and then to Api Settings. I greet and thank you for using the application.</string>
    <string name="orderbook_header_rate">Rate</string>
    <string name="orderbook_header_amount">Amount</string>
    <string name="orderbook_header_value">Price</string>
    <string name="orderbook_header_sell">Ask - Sale</string>
    <string name="orderbook_header_buy">Bid - Purchase</string>
    <string name="place_offer_title_buy">I want to buy</string>
    <string name="place_offer_title_sell">I want to sell</string>
    <string name="place_offer_receive_hint">You will receive:</string>
    <string name="place_offer_button_buy">Buy</string>
    <string name="place_offer_button_sell">Sell</string>
    <string name="place_offer_checkbox_hidden">Hidden</string>
    <string name="place_offer_checkbox_post_only">Post only</string>
    <string name="placeOfferStatus">Offer added.</string>
    <string name="placeOfferStatusError">Error - offer canceled</string>
    <string name="deposit_wallet_button">Deposit</string>
    <string name="withdraw_wallet_button">Withdraw</string>
    <string name="copy_wallet_addres">Deposit address copied</string>
    <string name="copy_donate_addres">Donate address copied</string>
    <string name="deposit_adress_hint">Deposit address</string>
    <string name="deposit_account_number_hint">Account number</string>
    <string name="deposit_swift_hint">SWIFT</string>
    <string name="deposit_recipient_hint">Recipient name</string>
    <string name="deposit_recipient_address_hint">Recipient address</string>
    <string name="deposit_title_hint">Transfer title</string>
    <string name="deposit_payment_id_hint">Payment ID</string>
    <string name="nav_drawer_open">Menu open</string>
    <string name="nav_drawer_closed">Menu closed</string>
    <string name="menu_wallet">Wallets</string>
    <string name="menu_offers">My offers</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_login">Log In</string>
    <string name="menu_logout">Log Out</string>
    <string name="menu_exchange">Exchange</string>
    <string name="menu_market" translatable="false">Market</string>
    <string name="menu_account">Account</string>
    <string name="menu_app" translatable="false">BitBay App</string>
    <string name="menu_calculator">Calculator</string>
    <string name="settings_reset_ad_preferences">Reset ad preferences</string>
    <string name="settings_night_mode_switch">Night mode</string>
    <string name="paypal_donate">"Support me on PayPal or by transfer to the given crypto addresses. "</string>
    <string name="menu_donate" translatable="false">Donate</string>
    <string name="menu_rss_feed">Crypto news</string>
    <string name="withdraw_address_hint">Recipient\'s account number (IBAN)</string>
    <string name="withdraw_amount_hint">Amount of fiat currency to send</string>
    <string name="withdraw_name_hint">Recipient\'s full name</string>
    <string name="withdraw_crypto_address_hint">Recipient\'s address</string>
    <string name="withdraw_crypto_amount_hint">Amount of cryptocurrency to send</string>
    <string name="withdraw_crypto_comment_hint">Comment to withdrawal</string>
    <string name="withdraw_crypto_paymentID">Payment ID</string>
    <string name="withdraw_button">Withdraw</string>
    <string name="menu_rss_sources">add source</string>
    <string name="interstitialAds" translatable="false">*******************************************</string>
    <string name="details_fragment_name">Detail card about</string>
    <string name="offers_not_found">No orders</string>
    <string name="news_source_not_found">News sources not selected. Please add source by clicking icon on appbar.</string>
    <string name="transaction_history_fragment_name">Transaction history</string>
    <string name="no_history_text">No history</string>
    <string name="menu_youtube_channel">BitBay analysis</string>
    <string name="menu_donate_paypal" translatable="false">PayPal</string>
    <string name="menu_donate_btc" translatable="false">Bitcoin</string>
    <string name="menu_donate_eth" translatable="false">Etherum</string>
    <string name="menu_donate_lsk" translatable="false">Lisk</string>
    <string name="btc_address_donate" translatable="false">329MsVej9kx7hmrYqFQRTx3MVLxB3qNmj5</string>
    <string name="lsk_address_donate" translatable="false">4400349293584149952L</string>
    <string name="eth_address_donate" translatable="false">0xc6fe04a5307ed5dd758bfff0d58c0bc37cf5e042</string>
</resources>
