<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/calculator_constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/investment_amount_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/investment_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:text="@string/investment_amount"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toBottomOf="@+id/investment_amount_edit"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/purchase_rate_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/investment_amount_edit"
        app:layout_constraintTop_toBottomOf="@+id/investment_amount_edit" />

    <TextView
        android:id="@+id/purchase_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/purchase_rate"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toBottomOf="@+id/purchase_rate_edit"
        app:layout_constraintStart_toStartOf="@+id/investment_amount" />

    <EditText
        android:id="@+id/sales_rate_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/purchase_rate_edit"
        app:layout_constraintTop_toBottomOf="@+id/purchase_rate_edit" />

    <TextView
        android:id="@+id/sales_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/sales_rate"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toBottomOf="@+id/sales_rate_edit"
        app:layout_constraintStart_toStartOf="@+id/purchase_rate" />

    <EditText
        android:id="@+id/fee_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/sales_rate_edit"
        app:layout_constraintTop_toBottomOf="@+id/sales_rate_edit" />

    <TextView
        android:id="@+id/fee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/fee"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toBottomOf="@+id/fee_edit"
        app:layout_constraintStart_toStartOf="@+id/sales_rate" />

    <EditText
        android:id="@+id/profit_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/fee_edit"
        app:layout_constraintTop_toBottomOf="@+id/fee_edit" />

    <TextView
        android:id="@+id/profit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/profit"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toBottomOf="@+id/profit_edit"
        app:layout_constraintStart_toStartOf="@+id/fee" />

    <TextView
        android:id="@+id/calculator_instructions"
        android:layout_width="324dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/calculator_instruction"
        android:textSize="@dimen/text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profit_edit" />
</android.support.constraint.ConstraintLayout>