<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relativeLayout"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin">

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/price"
            app:layout_constraintBottom_toBottomOf="@+id/less_than"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/greater_than" />

        <TextView
            android:id="@+id/greater_than"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/greater_than"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/greater_than_edit"
            app:layout_constraintStart_toEndOf="@+id/price"
            app:layout_constraintTop_toTopOf="@+id/greater_than_edit" />

        <TextView
            android:id="@+id/check_interval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/check_interval"
            app:layout_constraintBottom_toBottomOf="@+id/check_interval_edit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/check_interval_edit" />

        <TextView
            android:id="@+id/less_than"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/less_than"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/less_than_edit"
            app:layout_constraintStart_toEndOf="@+id/price"
            app:layout_constraintTop_toTopOf="@+id/less_than_edit" />

        <EditText
            android:id="@+id/greater_than_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/greater_than"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/check_interval_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/check_interval_edit"
            android:inputType="numberSigned"
            app:layout_constraintStart_toEndOf="@+id/check_interval"
            app:layout_constraintTop_toBottomOf="@+id/less_than_edit" />

        <EditText
            android:id="@+id/less_than_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="@+id/greater_than_edit"
            app:layout_constraintStart_toStartOf="@+id/greater_than_edit"
            app:layout_constraintTop_toBottomOf="@+id/greater_than_edit" />

        <CheckBox
            android:id="@+id/notification_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/alaram_notification"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/check_interval_edit"
            app:layout_constraintTop_toBottomOf="@+id/check_interval_edit" />
    </android.support.constraint.ConstraintLayout>
</RelativeLayout>